<resources>
    <string name="app_name">Shapes Drawer</string>
    <string name="action_settings">Settings</string>
    <string name="edit_shape">Edit Shape</string>
    <string name="x1">x1</string>
    <string name="y1">y1</string>
    <string name="x2">x2</string>
    <string name="y2">y2</string>
    <string name="stroke_width">Stroke width</string>
    <string name="angle">Angle</string>
    <string name="pen_color">Pen Color</string>
    <string name="fill_color">Fill Color</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="create">Create</string>
    <string name="create_shape">Create Shape</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>